--- a/.github/workflows/pull_subrepos.yml
+++ b/.github/workflows/pull_subrepos.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: Checkout repository and submodules
         uses: actions/checkout@v3
-        with:
-          submodules: recursive
+        run: git submodule update --init --recursive --remote
 
       - name: Push results
         run: |
